<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧消防</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_tabbar">MainTabbarActivity</string>
    <string name="tabbar_home">首页</string>
    <string name="tabbar_safe">云安</string>
    <string name="tabbar_control">云控</string>
    <string name="tabbar_camera">云视</string>
    <string name="tabbar_setting">设置</string>
    <string name="actionbar_news">新闻公告</string>
    <string name="actionbar_alarm">告警信息</string>
    <string name="tag_hint">Tag can be numbe alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="title_activity_news_page">NewsPageActivity</string>
    <string name="title_activity_alarm_page">AlarmPageActivity</string>
    <string name="home_menu_alarm">智慧告警</string>
    <string name="home_menu_status">设备状态</string>
    <string name="home_menu_check">日常巡检</string>
    <string name="home_menu_manage">智慧管理</string>
    <string name="home_menu_info">基本信息</string>
    <string name="home_menu_fireknowledge">消防常识</string>
    <string name="home_menu_mall">设备商城</string>
    <string name="title_activity_fire_alarm">FireAlarmActivity</string>
    <string name="title_activity_fire_alarm_view">FireAlarmViewActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_device_mall">DeviceMallActivity</string>
    <string name="title_activity_company_info">CompanyInfoActivity</string>
    <string name="title_activity_company_list">CompanyListActivity</string>
    <string name="title_activity_check_log">CheckLogActivity</string>
    <string name="title_activity_check_operate">CheckOperateActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_common_sense">CommonSenseActivity</string>
    <string name="title_activity_content_view">ContentViewActivity</string>
    <string name="title_activity_product_mall">ProductMallActivity</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="title_activity_device_status">DeviceStatusActivity</string>
    <string name="title_activity_misp_upload_img">MispUploadImgActivity</string>

</resources>
